# cvtool

./: .gitignore  README.md  cvtool.py  image.py  no_path_asset.py  np_assets.py  npa.py  positions.py  requirements.txt  setup.cfg  setup.py  template_match.py  tool.py
.github/workflows/: cl.yml
cvtool/: __init__.py  alpha.py  draw.py  image.py  positions.py  template_match.py  video.py
example/: image_example.py  image_scale_example.py  video_example.py
pathless_asset/: module.py  pathless_asset.py
