[metadata]
name = cvtool
version = 0.1
author = Q.Z.Lin
url = https://github.com/QZLin/cvtool
license = GNU General Public License v3
classifiers = License :: OSI Approved :: GNU General Public License v3 (GPLv3)


[options]
packages = cvtool
           pathless_asset

[options.extras_require]
image = opencv-python
        numpy

[options.package_data]
license = LICENSE